# d-rs

./: Cargo.toml  README.md  install.sh  numbers
src/: error.rs  main.rs  operator.rs  regexes.rs
src/filterer/: mod.rs  regex.rs
src/mapper/: mod.rs  python.rs  regex.rs
src/reducer/: join.rs  mod.rs  prod.rs  sum.rs
src/splitter/: mod.rs  str_sep.rs  ws.rs
